# GESA-2

./: .replit  README.md  app.py  check_columns.py  models.py  pyproject.toml  routes.py  utils.py
Gamified-Employability-Quotient-Analyzer-/: app.py  replit.md  requirements.txt  routes.py  utils.py
Gamified-Employability-Quotient-Analyzer-/static/css/: style.css
Gamified-Employability-Quotient-Analyzer-/templates/: adaptive_results.html  admin_add_level.html  admin_dashboard.html  admin_edit_level.html  analytics.html  assessments.html
attached_assets/: Pasted-DATABASE-URL-postgresql-neondb-owner-npg-SiHbMslc35ZL-ep-old-poetry-aefv5o6c-c-2-us-east-2-aws-ne-1751545091448_1751545091448.txt  Pasted-INFO-werkzeug-10-84-0-41-03-Jul-2025-12-25-57-GET-admin-levels-HTTP-1-1-200-INFO-werkzeu-1751545616772_1751545616773.txt  Pasted-TemplateNotFound-jinja2-exceptions-TemplateNotFound-admin-levels-html-Traceback-most-recent-ca-1751545045335_1751545045336.txt
templates/: adaptive_assessment.html  admin_add_question.html  admin_edit_level.html  admin_edit_question.html  admin_levels.html  admin_questions.html  analytics.html  assessments.html  create_admin.html  dashboard.html
